--- a/src/components/PodcastPlatforms/PodcastPlatforms.css
+++ b/src/components/PodcastPlatforms/PodcastPlatforms.css
@@ -1,6 +1,7 @@
-.PodcastPlatforms > p {
+.PodcastPlatforms > h1 {
   text-align: center;
-  font-weight: bold;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .podcast-platforms-container {
