Remove dropshadow and animation from episode cards on hover

--- a/src/components/pages/Episodes/Episodes.css
+++ b/src/components/pages/Episodes/Episodes.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  -webkit-perspective: 10000;
 }
 
 .episode-cards-container .card {
@@ -10,12 +9,10 @@
   margin-bottom: 1rem;
   border-radius: 1rem;
   cursor: pointer;
-  transition: 0.45s ease;
 }
 
 .episode-cards-container .card:hover {
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
-  transform: translateZ(5rem);
+  opacity: 0.75;
 }
 
 .episode-cards-container .card-img-top {
@@ -28,7 +25,7 @@
 }
 
 .episode-cards-container .guest-name {
-  color: royalblue;
+  color: lightslategray;
 }
 
 .modal-header {
